LLVM12 breaks atomicCompSwap tests with radeonsi
Slightly different output each time (though it fails every time, and so far the failures have always started on line 76 and ended on line 82/83), e.g.
Atomic counter 0 test failed: Reference == Observed
Reference: 4294967295
Observed: 277872642
Test failure on line 76
Atomic counter 1 test failed: Reference == Observed
Reference: 4294967295
Observed: 1196544
Test failure on line 77
Atomic counter 2 test failed: Reference == Observed
Reference: 4294967295
Observed: 18496
Test failure on line 78
Atomic counter 3 test failed: Reference == Observed
Reference: 4294967295
Observed: 8388608
Test failure on line 79
Atomic counter 4 test failed: Reference == Observed
Reference: 4294967295
Observed: 256
Test failure on line 80
Atomic counter 5 test failed: Reference == Observed
Reference: 4294967295
Observed: 536871424
Test failure on line 81
Atomic counter 6 test failed: Reference == Observed
Reference: 4294967295
Observed: 0
Test failure on line 82
PIGLIT: {"result": "fail" }